show a "warning" icon whenever a new warning or error was issued the icon is hidden again after any kind of activity in the log window
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@994 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -4425,10 +4425,26 @@ Usually you will want to use the cutter radius here to cut around the outline.</
           <object class="GtkEventBox" id="StatusBarEventBox">
             <property name="visible">True</property>
             <child>
-              <object class="GtkStatusbar" id="StatusBar">
+              <object class="GtkHBox" id="hbox37">
                 <property name="visible">True</property>
-                <property name="tooltip_text" translatable="yes">Click to open the log window.</property>
-                <property name="spacing">2</property>
+                <child>
+                  <object class="GtkImage" id="StatusBarWarning">
+                    <property name="stock">gtk-dialog-warning</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkStatusbar" id="StatusBar">
+                    <property name="visible">True</property>
+                    <property name="spacing">2</property>
+                  </object>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </object>
             </child>
           </object>
