--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -5227,16 +5227,72 @@ Choose a small value to minimize rapid moves up and down.</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="GCodeStartStopSpindle">
-                            <property name="label" translatable="yes">Start / Stop Spindle (M3/M5)</property>
+                          <object class="GtkExpander" id="expander3">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="draw_indicator">True</property>
+                            <child>
+                              <object class="GtkAlignment" id="alignment10">
+                                <property name="visible">True</property>
+                                <property name="left_padding">25</property>
+                                <child>
+                                  <object class="GtkTable" id="table17">
+                                    <property name="visible">True</property>
+                                    <property name="n_rows">2</property>
+                                    <property name="n_columns">2</property>
+                                    <child>
+                                      <object class="GtkCheckButton" id="GCodeStartStopSpindle">
+                                        <property name="label" translatable="yes">Start / Stop Spindle (M3/M5)</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="draw_indicator">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="right_attach">2</property>
+                                        <property name="x_options">GTK_FILL</property>
+                                        <property name="y_options">GTK_FILL</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkLabel" id="GCodeSpindleDelayLabel">
+                                        <property name="visible">True</property>
+                                        <property name="xalign">0</property>
+                                        <property name="label" translatable="yes">Delay (in seconds) after start / stop:</property>
+                                      </object>
+                                      <packing>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkSpinButton" id="GCodeSpindleDelay">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="adjustment">GCodeSpindleDelayValue</property>
+                                      </object>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="right_attach">2</property>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
+                                        <property name="x_options">GTK_FILL</property>
+                                        <property name="y_options">GTK_FILL</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                            <child type="label">
+                              <object class="GtkLabel" id="label7">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Spindle control</property>
+                              </object>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -5611,7 +5667,7 @@ Choose a small value to minimize rapid moves up and down.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkSpinButton" id="spinbutton1">
+                                          <object class="GtkSpinButton" id="ToolChangeRapidMoveDown">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="invisible_char">&#x25CF;</property>
@@ -5628,7 +5684,7 @@ Choose a small value to minimize rapid moves up and down.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkSpinButton" id="spinbutton2">
+                                          <object class="GtkSpinButton" id="ToolChangeSlowMoveDown">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="invisible_char">&#x25CF;</property>
@@ -5657,7 +5713,7 @@ Choose a small value to minimize rapid moves up and down.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <object class="GtkSpinButton" id="spinbutton3">
+                                          <object class="GtkSpinButton" id="ToolChangeSlowMoveSpeed">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="invisible_char">&#x25CF;</property>
@@ -8926,6 +8982,10 @@ upon interesting bugs and weird results.</property>
   <object class="GtkAdjustment" id="TouchOffHeightValue">
     <property name="lower">-10000</property>
     <property name="upper">10000</property>
+    <property name="step_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="GCodeSpindleDelayValue">
+    <property name="upper">100</property>
     <property name="step_increment">1</property>
   </object>
 </interface>
