added an optional pause (M0) before and after touch off operations (useful for manually controlled spindles)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1005 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -5623,7 +5623,7 @@ Choose a small value to minimize rapid moves up and down.</property>
                                     <child>
                                       <object class="GtkTable" id="TouchOffLocationTable">
                                         <property name="visible">True</property>
-                                        <property name="n_rows">6</property>
+                                        <property name="n_rows">7</property>
                                         <property name="n_columns">3</property>
                                         <property name="column_spacing">3</property>
                                         <property name="row_spacing">3</property>
@@ -5896,6 +5896,23 @@ be shifted accordingly.</property>
                                             <property name="bottom_attach">6</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkCheckButton" id="TouchOffPauseExecution">
+                                            <property name="label" translatable="yes">Pause GCode execution (M0) before and after tool change</property>
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">False</property>
+                                            <property name="tooltip_text" translatable="yes">This setting is supposed to be a workaround for machines with manual spindle control.
+Everyone else should use the option for M3/M5 (see above).</property>
+                                            <property name="draw_indicator">True</property>
+                                          </object>
+                                          <packing>
+                                            <property name="right_attach">3</property>
+                                            <property name="top_attach">6</property>
+                                            <property name="bottom_attach">7</property>
+                                            <property name="x_options">GTK_FILL</property>
                                           </packing>
                                         </child>
                                       </object>
